docs: fix visibility of sdk badge and remove truncating of breadcrumb

--- a/doc/templates/uno/main.scss
+++ b/doc/templates/uno/main.scss
@@ -435,13 +435,9 @@ h5 {
 #breadcrumb {
   padding: 0 32px;
   position: relative;
-  overflow: hidden;
 }
 
 .breadcrumb {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   font-size: 14px;
   line-height: 24px;
   font-weight:400;
